Fixing border alignment in Recent assets

--- a/modules/apps/publisher/themes/default/css/es-publisher-commons.css
+++ b/modules/apps/publisher/themes/default/css/es-publisher-commons.css
@@ -1188,8 +1188,8 @@ circle:hover {
     width: 100%;
 }
 .asset-being-added .row-fluid{
-     height: 50px;
-    line-height: 50px;
+     height: 51px;
+    line-height: 51px;
 }
 .asset-being-added .span2{
     text-align: right;
